cosmos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
  labels:
    app: personal-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
      - name: personal-website
        image: ghcr.io/incognito124/personal-website:1767736178
        ports:
        - containerPort: 80
          name: http
