cosmos/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  labels:
    app: personal-website
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: personal-website
