cosmos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: myresolver
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website
            port:
              number: 80
